--- a/EnglishMaster/Pages/Result.razor
+++ b/EnglishMaster/Pages/Result.razor
@@ -58,7 +58,7 @@
             </tbody>
         </table>
     }
-    <button class="btn btn-secondary form-control m-3" @onclick="@(() => navManager.NavigateTo(navManager.BaseUri))">戻る</button>
+    <button class="btn btn-primary form-control m-3" @onclick="@(() => navManager.NavigateTo(navManager.BaseUri))">戻る</button>
 </div>
 @code {
     private List<Models.Result> ExamResult = new();
